--- a/style.css
+++ b/style.css
@@ -4,24 +4,30 @@
     overflow-x: hidden;
 }
 
-.bg{
-    z-index: -1;
+#character {
+    width: 250px;
+    height: 250px;
+    image-rendering: pixelated;
+    animation: character-run .5s infinite ;
 }
+
+/* .bg{
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+} */
+
 .game{
-    width: 5000px;
-    height: 200px;
+    width: 100vw;
+    height: 75vh;
     border: 1px solid black;
     margin: auto;
+    display: flex;
+    justify-content: start;
+    align-items: end;
 }
-#character{
-    width: 20px;
-    height: 50px;
-    background-color: rgb(0, 0, 0);
-    position:relative;
-    border-radius: 100px;
-    top: 150px;
-    right: -20px;
-}
+
 .animate{
     animation: jump 0.25s linear;
 }
@@ -32,11 +38,11 @@
 }
 
 #block{
-    background-color: blue;
+    background-color: rgb(255, 38, 0);
     width: 20px;
     height: 20px;
     position: relative;
-    top: 130px;
+    top: 139px;
     left: 500px;
     animation: block .5s infinite linear;
 }
@@ -44,6 +50,7 @@
     0%{left: 500px}
     100%{left: -20px}
 }
+
 p{
     text-align: center;
 }
